tests/ui/feature-gates/feature-gate-new-temp-lifetime.rs
fn main() {
    super let it_doesnt_work = 0; //~ ERROR: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found keyword `let`
}
